--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -28,3 +28,16 @@
 .fs-xl { font-size: 1.5rem; }    /* 24px */
 .fs-2xl { font-size: 2rem; }     /* 32px */
 .fs-3xl { font-size: 3rem; }     /* 48px */
+
+
+/* Animations */
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
