--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -29,6 +29,11 @@
 .fs-2xl { font-size: 2rem; }     /* 32px */
 .fs-3xl { font-size: 3rem; }     /* 48px */
 
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
 
 /* Animations */
 
