--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -35,6 +35,18 @@
   user-select: none; /* Standard syntax */
 }
 
+.icon {
+  color: black;
+}
+
+.icon:hover {
+  color: var(--mid-green);
+}
+
+h3{
+  font-size: 1.5rem;
+}
+
 /* Animations */
 
 .fade-enter-active,
